Change the way tasks are stored, add small loading at the beging

--- a/public/languages/en.json
+++ b/public/languages/en.json
@@ -6,25 +6,27 @@
   "settings": "Settings",
   "error404": "Error 404",
   "pageNotFound": "Ops, page not found :(",
-  "checkYourMail": "Check your mail",
-  "talkToAllVillagers": "Talk to all villagers",
-  "checkRecycleBin": "Check recycle bin",
-  "checkBeachForRecipes": "Check beach for recipes",
-  "checkForIslandVisitors": "Check for island visitors",
-  "completeNookMilesTasks": "Complete Nook Miles tasks",
-  "waterYourFlowers": "Water your flowers",
-  "hitEachRock": "Hit each rock",
-  "shakeEachTree": "Shake each tree",
-  "pickupAndSellSeaShells": "Pickup and sell sea shells",
-  "findTheGoldenSpotAndPlantAMoneyTree": "Find the Golden Spot and plant a money tree",
-  "digUpAllFossils": "Dig up all fossils",
-  "shootDownPresents": "Shoot down presents",
-  "goFishing": "Go fishing",
-  "goBugHunting": "Go bug hunting",
-  "goClamHunting": "Go clam hunting",
-  "plantFlowers": "Plant flowers",
-  "plantTrees": "Plant trees",
-  "goIntoVillagersHousesForDIYRecipes": "Go into villagers houses gor DIY recipes",
+  "tasks": [
+    "Check your mail",
+    "Talk to all villagers",
+    "Check recycle bin",
+    "Check beach for recipes",
+    "Check for island visitors",
+    "Complete Nook Miles tasks",
+    "Water your flowers",
+    "Hit each rock",
+    "Shake each tree",
+    "Pickup and sell sea shells",
+    "Find the Golden Spot and plant a money tree",
+    "Dig up all fossils",
+    "Shoot down presents",
+    "Go fishing",
+    "Go bug hunting",
+    "Go clam hunting",
+    "Plant flowers",
+    "Plant trees",
+    "Go into villagers houses gor DIY recipes"
+  ],
   "resetMyTasks": "Reset my tasks",
   "bugs": "Bugs",
   "fishes": "Fishes",
