--- a/public/languages/pt.json
+++ b/public/languages/pt.json
@@ -6,25 +6,27 @@
   "settings": "Configurações",
   "error404": "Erro 404",
   "pageNotFound": "Ops, página não encontrada :(",
-  "checkYourMail": "Verificar correios",
-  "talkToAllVillagers": "Conversar com todos",
-  "checkRecycleBin": "Verificar lixeira",
-  "checkBeachForRecipes": "Procurar receitas na praia",
-  "checkForIslandVisitors": "Procurar por visitante",
-  "completeNookMilesTasks": "Completar tarefas Nook Miles",
-  "waterYourFlowers": "Regar as plantas",
-  "hitEachRock": "Bater nas pedras",
-  "shakeEachTree": "Cachoalhar árvores",
-  "pickupAndSellSeaShells": "Pegar e vender conchas",
-  "findTheGoldenSpotAndPlantAMoneyTree": "Encontrar o lugar dourado e plantar uma árvore alí",
-  "digUpAllFossils": "Cavar todos os fósseis",
-  "shootDownPresents": "Estourar balões de presentes",
-  "goFishing": "Pescar",
-  "goBugHunting": "Caçar insetos",
-  "goClamHunting": "Caçar moluscos",
-  "plantFlowers": "Plantar flores",
-  "plantTrees": "Plantar árvores",
-  "goIntoVillagersHousesForDIYRecipes": "Entrar na casa dos moradores para buscar receitas",
+  "tasks": {
+    "checkYourMail": "Verificar correios",
+    "talkToAllVillagers": "Conversar com todos",
+    "checkRecycleBin": "Verificar lixeira",
+    "checkBeachForRecipes": "Procurar receitas na praia",
+    "checkForIslandVisitors": "Procurar por visitante",
+    "completeNookMilesTasks": "Completar tarefas Nook Miles",
+    "waterYourFlowers": "Regar as plantas",
+    "hitEachRock": "Bater nas pedras",
+    "shakeEachTree": "Cachoalhar árvores",
+    "pickupAndSellSeaShells": "Pegar e vender conchas",
+    "findTheGoldenSpotAndPlantAMoneyTree": "Encontrar o lugar dourado e plantar uma árvore alí",
+    "digUpAllFossils": "Cavar todos os fósseis",
+    "shootDownPresents": "Estourar balões de presentes",
+    "goFishing": "Pescar",
+    "goBugHunting": "Caçar insetos",
+    "goClamHunting": "Caçar moluscos",
+    "plantFlowers": "Plantar flores",
+    "plantTrees": "Plantar árvores",
+    "goIntoVillagersHousesForDIYRecipes": "Entrar na casa dos moradores para buscar receitas"
+  },
   "resetMyTasks": "Reiniciar tarefas",
   "bugs": "Insetos",
   "fishes": "Peixes",
