Add small version to internacionalization

--- a/public/languages/en.json
+++ b/public/languages/en.json
@@ -52,6 +52,7 @@
   "daaanger": "DAAANGER",
   "tasksReseted": "Tasks reseted",
   "bugsReseted": "Bugs reseted",
+  "fishesReseted": "fishes reseted",
   "uncheckBugs": "Uncheck Bugs",
   "cleanAll": "Clean All",
   "language": "Language",
