Add missing translation, fix css on settings for ios

--- a/public/languages/en.json
+++ b/public/languages/en.json
@@ -54,6 +54,7 @@
   "bugsReseted": "Bugs reseted",
   "fishesReseted": "Fishes reseted",
   "uncheckBugs": "Uncheck Bugs",
+  "uncheckFishes": "Uncheck Fishes",
   "cleanAll": "Clean All",
   "language": "Language",
   "chooseTheDesiredLanguage": "Choose the desired language"
