chore: add number of fossils on daily checklist

--- a/public/languages/en.json
+++ b/public/languages/en.json
@@ -18,7 +18,7 @@
   "shakeEachTree": "Shake each tree",
   "pickupAndSellSeaShells": "Pickup and sell sea shells",
   "findTheGoldenSpotAndPlantAMoneyTree": "Find the Golden Spot and plant a money tree",
-  "digUpAllFossils": "Dig up all fossils",
+  "digUpAllFossils": "Dig up all 4 fossils",
   "shootDownPresents": "Shoot down presents",
   "goFishing": "Go fishing",
   "goBugHunting": "Go bug hunting",
