--- a/public/languages/pt.json
+++ b/public/languages/pt.json
@@ -18,7 +18,7 @@
   "shakeEachTree": "Cachoalhar árvores",
   "pickupAndSellSeaShells": "Pegar e vender conchas",
   "findTheGoldenSpotAndPlantAMoneyTree": "Encontrar o lugar dourado e plantar uma árvore alí",
-  "digUpAllFossils": "Cavar todos os fósseis",
+  "digUpAllFossils": "Cavar todos os 4 fósseis",
   "shootDownPresents": "Estourar balões de presentes",
   "goFishing": "Pescar",
   "goBugHunting": "Caçar insetos",
