fix: plant money tree

--- a/public/languages/pt.json
+++ b/public/languages/pt.json
@@ -17,7 +17,7 @@
   "hitEachRock": "Bater nas pedras",
   "shakeEachTree": "Cachoalhar árvores",
   "pickupAndSellSeaShells": "Pegar e vender conchas",
-  "findTheGoldenSpotAndPlantAMoneyTree": "Encontrar o lugar dourado e plantar uma árvore alí",
+  "findTheGoldenSpotAndPlantAMoneyTree": "Encontrar o lugar dourado e plantar uma árvore de dinheiro alí",
   "digUpAllFossils": "Cavar todos os 4 fósseis",
   "shootDownPresents": "Estourar balões de presentes",
   "goFishing": "Pescar",
