--- a/public/languages/pt.json
+++ b/public/languages/pt.json
@@ -66,5 +66,6 @@
   "copyMissingItems": "Copiar {museumType} restantes",
   "copyCaughtItems": "Copiar {museumType} pegos",
   "creditsTitle": "Créditos",
-  "creditsBody": "Feito com ♥️ por"
+  "creditsBody": "Feito com ♥️ por",
+  "twitterBody": "Você pode nos seguir pra saber das novidades em"
 }
