fix: diary text correction (#35)

--- a/public/languages/en.json
+++ b/public/languages/en.json
@@ -25,7 +25,7 @@
   "goClamHunting": "Go clam hunting",
   "plantFlowers": "Plant flowers",
   "plantTrees": "Plant trees",
-  "goIntoVillagersHousesForDIYRecipes": "Go into villagers houses gor DIY recipes",
+  "goIntoVillagersHousesForDIYRecipes": "Go into villagers houses for DIY recipes",
   "resetMyTasks": "Reset my tasks",
   "bugs": "Bugs",
   "fishes": "Fishes",
