--- a/public/languages/pt.json
+++ b/public/languages/pt.json
@@ -15,7 +15,7 @@
   "completeNookMilesTasks": "Completar tarefas Nook Miles",
   "waterYourFlowers": "Regar as plantas",
   "hitEachRock": "Bater nas pedras",
-  "shakeEachTree": "Cachoalhar árvores",
+  "shakeEachTree": "Sacudir árvores",
   "pickupAndSellSeaShells": "Pegar e vender conchas",
   "findTheGoldenSpotAndPlantAMoneyTree": "Encontrar o lugar dourado e plantar dinheiro ali",
   "digUpAllFossils": "Cavar todos os fósseis",
