--- a/public/languages/pt.json
+++ b/public/languages/pt.json
@@ -67,5 +67,16 @@
   "copyCaughtItems": "Copiar {museumType} pegos",
   "creditsTitle": "Créditos",
   "creditsBody": "Feito com ♥️ por",
-  "twitterBody": "Você pode nos seguir pra saber das novidades em"
+  "twitterBody": "Você pode nos seguir pra saber das novidades em",
+  "display": "Visualização",
+  "chooseWhatYouWantToSeeInTheMenu": "Escolha o que quer enxergar no menu",
+  "howCanISeeTheBugsAndFishesIVeCaptured": "Como posso ver os insetos e peixes que já peguei",
+  "youCanCheckOnYourNookPhoneInTheOption": "Você pode encontrar no seu Nook Phone, na opção",
+  "howCanISeeWhichCreaturesIAlreadyDonatedToTheMuseum": "Como posso ver as criaturas que já doei ao museu",
+  "onTheCritterpediaAppYouWillSeeAnIconFrom": "No aplicativo Critterpedia, você verá um ícone do",
+  "onTheCreaturesYouAlreadyDonated": "nas criaturas que você já doou",
+  "howCanISeeTheFossilsIHave": "Como posso ver os fósseis que tenho",
+  "goToNookTerminalAndSelect": "Vá ao Terminal Nook e selecione a opção",
+  "accessTheOption": "Acesse a opção",
+  "filterTheResultsFromTheShoppingBy": "Filte os resultados do shopping por"
 }
