Fix scroll on page without content that fill page (#41)
- Update language version
- Add icons for arrow left and right
- Small css fixes

Co-authored-by: Diogo Ferreira Fernandes <dio@mac.local>

--- a/public/languages/en.json
+++ b/public/languages/en.json
@@ -71,8 +71,8 @@
   "twitterBody": "You can follow us to hear the latest news on",
   "updatesTitle": "Updates",
   "noUpdatesCopy": "We haven't found any updates. Check back later.",
-  "backToSettings": "← Back to Settings",
-  "seeLatestUpdates": "See latest updates →",
+  "backToSettings": "Back to Settings",
+  "seeLatestUpdates": "See latest updates",
   "display": "Display",
   "chooseWhatYouWantToSeeInTheMenu": "Choose what you want to see in the menu",
   "howCanISeeTheBugsAndFishesIVeCaptured": "How can I see the bugs and fishes I've captured",
