--- a/public/languages/pt.json
+++ b/public/languages/pt.json
@@ -71,8 +71,8 @@
   "twitterBody": "Você pode nos seguir pra saber das novidades em",
   "updatesTitle": "Atualizações",
   "noUpdatesCopy": "Não encontramos nenhuma atualização. Tente novamente mais tarde.",
-  "backToSettings": "← Voltar para as Configurações",
-  "seeLatestUpdates": "Leia sobre as últimas atualizações →",
+  "backToSettings": "Voltar para as Configurações",
+  "seeLatestUpdates": "Leia sobre as últimas atualizações",
   "display": "Visualização",
   "chooseWhatYouWantToSeeInTheMenu": "Escolha o que quer enxergar no menu",
   "howCanISeeTheBugsAndFishesIVeCaptured": "Como posso ver os insetos e peixes que já peguei",
