Add new task to daily tasks (#48)
Co-authored-by: Diogo Ferreira Fernandes <dio@mac.local>

--- a/public/languages/en.json
+++ b/public/languages/en.json
@@ -27,6 +27,7 @@
   "plantFlowers": "Plant flowers",
   "plantTrees": "Plant trees",
   "goIntoVillagersHousesForDIYRecipes": "Go into villagers houses for DIY recipes",
+  "checkNookTerminalToGainNookMiles": "Check Nook Terminal to gain Nook Miles",
   "resetMyTasks": "Reset my tasks",
   "bugs": "Bugs",
   "fishes": "Fishes",
