--- a/public/languages/pt.json
+++ b/public/languages/pt.json
@@ -27,6 +27,7 @@
   "plantFlowers": "Plantar flores",
   "plantTrees": "Plantar árvores",
   "goIntoVillagersHousesForDIYRecipes": "Entrar na casa dos moradores para buscar receitas",
+  "checkNookTerminalToGainNookMiles": "Verificar Terminal Nook para ganhar Nook Miles",
   "resetMyTasks": "Reiniciar tarefas",
   "bugs": "Insetos",
   "fishes": "Peixes",
