feat: add copy missing songs button

--- a/public/languages/pt.json
+++ b/public/languages/pt.json
@@ -85,5 +85,7 @@
   "goToNookTerminalAndSelect": "Vá ao Terminal Nook e selecione a opção",
   "accessTheOption": "Acesse a opção",
   "filterTheResultsFromTheShoppingBy": "Filtre os resultados do shopping por",
-  "songs": "Músicas"
+  "songs": "Músicas",
+  "copyMissingSongs": "Copiar Músicas restantes",
+  "copyCollectedSongs": "Copiar Músicas colecionadas"
 }
