--- a/public/languages/en.json
+++ b/public/languages/en.json
@@ -85,5 +85,7 @@
   "goToNookTerminalAndSelect": "Go to Nook Terminal and select",
   "accessTheOption": "Access the option",
   "filterTheResultsFromTheShoppingBy": "Filter the results from the shopping by",
-  "songs": "Songs"
+  "songs": "Songs",
+  "copyMissingSongs": "Copy missing Songs",
+  "copyCollectedSongs": "Copy collected Songs"
 }
